@@ -1,3 +1,12 @@
+Wed Jul 29 21:22:18 UTC 2009  Steven Stallion  <stallions@ociweb.com>
+
+        * bin/DCPS/CPPTemplate.pm:
+        * dds/DCPS/InstanceState.cpp:
+
+	  Adjusted callback ordering by forcing dispose and unregister
+	  transitions to always pend releases based on non-valid sample
+	  insertions.
+
 Tue Jul 28 20:07:03 UTC 2009  Adam Mitz  <mitza@ociweb.com>
 
         * MPC/config/dcps.mpb:
